# wanaoni-foundation

./: .bash_history  .gitconfig  Cargo.toml  Dockerfile  README.md  anchore-syft.yml  requirements.txt
.bundle/cache/compact_index/rubygems.org.443.29b0360b937aa4d161703e6160654e47/: versions.etag
.bundle/cache/compact_index/rubygems.org.443.29b0360b937aa4d161703e6160654e47/info-etags/: addressable-85e51427c6d0aa46d24fd4653bcdf2cb  ansi-8e328b44a0343229e5ef5e3c4df07ec1  archive-tar-minitar-9bf8ed43d53e6baada5967b67e53a442  bindex-83a662f415cf2745600d8658db412f23  binding_of_caller-04bff74221ef34ddb26a7827662b3cd4  blankslate-c026323f1a03e45c7119fc9adcf27cb3  bootsnap-bcf6e2a1a51f57528c34c2b950cb1dad  byebug-3b74022f5739f592757cdcec43bd6159  c21e-09a09e7fa3fb139a028f8f7dcf51ace5  capybara-2e6380b6537c5fce2bb321b48bf0785d  (+78 more)
.cache/Microsoft/DeveloperTools/: deviceid
.github/workflows/: codeql.yml
.ssh/: id_rsa  id_rsa.pub  known_hosts  known_hosts.old
.vscode-server/data/: machineid
.vscode-server/data/CachedProfilesData/__default__profile__/: extensions.builtin.cache  extensions.user.cache
chatbot-env/: pyvenv.cfg
my-chatbot/: app.py
my-chatbot/chatbot-env/: pyvenv.cfg
wanaonifoundation/: Dockerfile  Gemfile  index.js  manage.py  package-lock.json  package.json
wanaonifoundation/agneschatbot/: apps.py
wanaonifoundation/dvlottery/: apps.py
wanaonifoundation/myrustproject/: Cargo.toml
wanaonifoundation/myrustproject/src/: main.rs
wanaonifoundation/wanaonifoundation/: Dockerfile  asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
(+218 files in other folders)
